--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -22,7 +22,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run scraping
+      - name: Run scraping (offline-safe)
+        env:
+              NO_NET:"1"
         run: python src/scrape_pricing.py
 
       - name: Run cleaning & regressions
